--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,6 +11,8 @@
     {% render 'meta-tags' %}
 
     {{ content_for_header }}
+
+    {{ 'theme.css' | asset_url | stylesheet_tag }}
   </head>
 
   <body>
@@ -19,5 +21,7 @@
     {{ content_for_layout }}
 
     {% sections 'footer-group' %}
+
+    <script src="{{ 'theme.js' | asset_url }}" defer="defer"></script>
   </body>
 </html>
