--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -58,10 +58,15 @@
 
 {% stylesheet %}
 .testimonials-section {
-  padding: 4rem 2rem;
+  padding: 4rem 0;
   background-color: var(--ctp-crust);
   position: relative;
   overflow: hidden;
+  width: 100vw;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
 .testimonials-title {
